# vts_interview

./: .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  Test.Dockerfile  docker-compose.yml  pgadmin.json  pyproject.toml
.githooks/: commit-msg  pre-commit  pre-push
.github/workflows/: check-run.yaml
api/: dependency.py
api/auth/: auth.py
api/movie/: movie.py
api/user/: user.py
app/auth/: piccolo_app.py  tables.py
app/auth/commands/: _example_data.py  load_data.py
app/auth/piccolo_migrations/: appauth_2024_04_03t22_11_47_472102.py  appauth_2024_04_03t22_51_35_262485.py  appsauth_2024_04_02t12_05_41_619640.py
app/movie/: piccolo_app.py  tables.py
app/movie/commands/: _example_data.py  load_data.py
app/movie/piccolo_migrations/: appmovie_2024_04_02t13_50_37_816635.py  appmovie_2024_04_03t22_12_03_430568.py  appmovie_2024_04_04t10_40_35_825387.py  appsmovie_2024_04_02t13_50_37_816635.py
apps/auth/: piccolo_app.py
apps/movie/: piccolo_app.py  tables.py
apps/movie/piccolo_migrations/: appsmovie_2024_04_02t13_50_34_204175.py
apps/product/: piccolo_app.py
conf/: piccolo_conf.py  server.py
script/: check_container.sh  run_test.sh
tests/: login.py  root.py
