[tool.poetry]
name = "vts-interview"
version = "0.1.0"
description = "VTS PYTHON DEVELOPER INTERVIEW ANSWER"
authors = ["nobinkhan <nazrulkhan.dk@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
granian = "^1.2.0"
piccolo = {extras = ["postgres"], version = "^1.5.0"}
piccolo-admin = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
