[tool.poetry]
name = "vts-interview"
version = "0.1.0"
description = "VTS PYTHON DEVELOPER INTERVIEW ANSWER"
authors = ["nobinkhan <nazrulkhan.dk@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.1"
granian = "^1.2.1"
piccolo = {extras = ["postgres", "orjson"], version = "^1.5.0"}
authx = "^1.0.0"
authx-extra = {extras = ["cache"], version = "^1.1.0"}
uvicorn = "^0.29.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
